[gd_scene load_steps=32 format=4 uid="uid://b26rtbfbjllcy"]

[ext_resource type="Script" uid="uid://call4531ikc12" path="res://levels/rooms/objective_room.gd" id="1_71tc6"]
[ext_resource type="Script" uid="uid://jqg5obv0d1" path="res://levels/objectives/objective.gd" id="2_scte5"]
[ext_resource type="Script" uid="uid://c7ii4bayyxpmm" path="res://levels/objectives/tasks/kill_target.gd" id="3_4qiff"]
[ext_resource type="Script" uid="uid://bk218myvtqqan" path="res://levels/rooms/boss/squid/squid_fight_level.gd" id="4_as5yp"]
[ext_resource type="TileSet" uid="uid://b7l7ni8f711eg" path="res://levels/generation/tiles.tres" id="5_sr7y4"]
[ext_resource type="PackedScene" uid="uid://cp6d8v6a3w12h" path="res://fish/squid/squid_boss.tscn" id="6_fltkh"]
[ext_resource type="Script" uid="uid://drwl4kjkix38c" path="res://boss/squid/squid_boss.gd" id="7_y3vat"]
[ext_resource type="Script" uid="uid://dc6vhyynq1mq8" path="res://addons/components_library/components/character/health.gd" id="8_pn073"]
[ext_resource type="Script" uid="uid://5fp57vk4c4a3" path="res://characters/hitbox.gd" id="9_baxqq"]
[ext_resource type="Script" uid="uid://jfyby71sefyu" path="res://utilities/trigger_hurt.gd" id="10_15kub"]
[ext_resource type="Script" uid="uid://oehys4qgdurh" path="res://boss/squid/tentacles.gd" id="11_me0pp"]
[ext_resource type="PackedScene" uid="uid://cralgksc31h64" path="res://fish/squid/tentacle.tscn" id="12_qkh7w"]
[ext_resource type="Texture2D" uid="uid://dw11lsbgl6ah2" path="res://boss/squid/bad_dragon_x_Frank.png" id="13_ixal2"]
[ext_resource type="Script" uid="uid://djfpp2d3fbril" path="res://boss/boss_healthbar.gd" id="14_of67m"]
[ext_resource type="Texture2D" uid="uid://bsou74tb8aokn" path="res://ui/UI_slideri.png" id="15_d14ba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oldw0"]
size = Vector2(12, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lh1f8"]
size = Vector2(34.1255, 83.975)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rs68"]
size = Vector2(21, 140)

[sub_resource type="Animation" id="Animation_0rs68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_ni1r6"]
resource_name = "idle"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32), Vector2(0, 8), Vector2(0, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0rs68"]
_data = {
&"RESET": SubResource("Animation_0rs68"),
&"idle": SubResource("Animation_ni1r6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_uufir"]
atlas = ExtResource("13_ixal2")
region = Rect2(0, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxy86"]
atlas = ExtResource("13_ixal2")
region = Rect2(50, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwey3"]
atlas = ExtResource("13_ixal2")
region = Rect2(100, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8vfx"]
atlas = ExtResource("13_ixal2")
region = Rect2(150, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqn8n"]
atlas = ExtResource("13_ixal2")
region = Rect2(150, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgmi5"]
atlas = ExtResource("13_ixal2")
region = Rect2(100, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu4u3"]
atlas = ExtResource("13_ixal2")
region = Rect2(50, 0, 50, 76)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdr4q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uufir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxy86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwey3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8vfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqn8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgmi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu4u3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_as5yp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sr7y4"]
size = Vector2(480, 24)

[node name="BossSquidRoom1" type="Node2D" node_paths=PackedStringArray("objective")]
script = ExtResource("1_71tc6")
objective = NodePath("Objective")
entry_text = Array[String](["Oh lawd", "he", "coming!"])
metadata/_custom_type_script = "uid://call4531ikc12"

[node name="Objective" type="Node" parent="."]
script = ExtResource("2_scte5")
metadata/_custom_type_script = "uid://jqg5obv0d1"

[node name="KillTargetTask" type="Node" parent="Objective" node_paths=PackedStringArray("target")]
script = ExtResource("3_4qiff")
target = NodePath("../../LevelPart/SquidBoss")
metadata/_custom_type_script = "uid://c7ii4bayyxpmm"

[node name="LevelPart" type="Node2D" parent="."]
position = Vector2(0, -32)
script = ExtResource("4_as5yp")

[node name="TileMapLayer" type="TileMapLayer" parent="LevelPart"]
tile_map_data = PackedByteArray("AAD9//b/AAAEAAQAAAD+//b/AAAFAAQAAAD///b/AAAFAAQAAAAAAPb/AAAGAAQAAAABAPb/AAAGAAQAAAACAPb/AAAHAAQAAADx/wAAAAADAAYAAADy/wAAAAAEAAYAAADz/wAAAAAHAAYAAAD0/wAAAAAIAAYAAAALAAAAAAADAAYAAAAMAAAAAAAEAAYAAAANAAAAAAAHAAYAAAAOAAAAAAAIAAYAAADx//f/AAADAAYAAADy//f/AAAEAAYAAADz//f/AAAFAAYAAAD0//f/AAAGAAYAAAD1//f/AAAHAAYAAAD2//f/AAAIAAYAAAAJAPf/AAADAAYAAAAKAPf/AAAEAAYAAAALAPf/AAAFAAYAAAAMAPf/AAAGAAYAAAANAPf/AAAHAAYAAAAOAPf/AAAIAAYAAAACAPX/AAAHAAMAAAABAPX/AAAGAAMAAAAAAPX/AAAFAAMAAAD///X/AAAGAAMAAAD+//X/AAAGAAMAAAD9//X/AAAEAAMAAAAFAPz/AAADAAYAAAAGAPz/AAAEAAYAAAAHAPz/AAAHAAYAAAAIAPz/AAAIAAYAAAD4//z/AAAEAAYAAAD5//z/AAAHAAYAAAD6//z/AAAIAAYAAAD3//z/AAADAAYAAAA=")
tile_set = ExtResource("5_sr7y4")

[node name="SquidBoss" parent="LevelPart" instance=ExtResource("6_fltkh")]
position = Vector2(0, -32)
script = ExtResource("7_y3vat")

[node name="Health" type="Node" parent="LevelPart/SquidBoss"]
script = ExtResource("8_pn073")
max_health = 10000.0
metadata/_custom_type_script = "uid://dc6vhyynq1mq8"

[node name="HitboxFace" type="Area2D" parent="LevelPart/SquidBoss" node_paths=PackedStringArray("health")]
position = Vector2(0, 32)
collision_layer = 4
collision_mask = 0
script = ExtResource("9_baxqq")
health = NodePath("../Health")
multiplier = 100
metadata/_custom_type_script = "uid://5fp57vk4c4a3"

[node name="Shape" type="CollisionShape2D" parent="LevelPart/SquidBoss/HitboxFace"]
position = Vector2(3, 8)
shape = SubResource("RectangleShape2D_oldw0")
debug_color = Color(0, 0.65, 0.140833, 0.54902)

[node name="Hitbox" type="Area2D" parent="LevelPart/SquidBoss" node_paths=PackedStringArray("health")]
position = Vector2(0, 32)
collision_layer = 4
collision_mask = 0
script = ExtResource("9_baxqq")
health = NodePath("../Health")
multiplier = 25
metadata/_custom_type_script = "uid://5fp57vk4c4a3"

[node name="Shape" type="CollisionShape2D" parent="LevelPart/SquidBoss/Hitbox"]
position = Vector2(0.10798, -57.9217)
rotation = -0.0683107
shape = SubResource("RectangleShape2D_lh1f8")
debug_color = Color(0.579414, 0.551862, 0.0385749, 0.42)

[node name="TriggerHurt" type="Area2D" parent="LevelPart/SquidBoss"]
position = Vector2(2, -4)
collision_layer = 0
collision_mask = 2
script = ExtResource("10_15kub")
metadata/_custom_type_script = "uid://jfyby71sefyu"

[node name="Shape" type="CollisionShape2D" parent="LevelPart/SquidBoss/TriggerHurt"]
position = Vector2(-2.5, 8)
shape = SubResource("RectangleShape2D_0rs68")
debug_color = Color(0.996162, 0, 0.192015, 0.42)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="LevelPart/SquidBoss"]
libraries = {
&"": SubResource("AnimationLibrary_0rs68")
}
autoplay = "idle"
speed_scale = 0.1

[node name="Tentacles" type="Node2D" parent="LevelPart"]
script = ExtResource("11_me0pp")

[node name="Tentacle" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(-208, 48)
rotation = -1.5708
is_vertical = true

[node name="Tentacle2" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(-96, 48)
rotation = -1.5708
is_vertical = true

[node name="Tentacle3" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(96, 48)
rotation = -1.5708
scale = Vector2(1, -1)
is_vertical = true

[node name="Segment1" parent="LevelPart/Tentacles/Tentacle3/Segments" index="0"]
position = Vector2(0, 1.55549)

[node name="Segment2" parent="LevelPart/Tentacles/Tentacle3/Segments" index="1"]
position = Vector2(32, 0.134983)

[node name="Segment3" parent="LevelPart/Tentacles/Tentacle3/Segments" index="2"]
position = Vector2(64, -1.37201)

[node name="Segment4" parent="LevelPart/Tentacles/Tentacle3/Segments" index="3"]
position = Vector2(96, -1.99992)

[node name="Segment5" parent="LevelPart/Tentacles/Tentacle3/Segments" index="4"]
position = Vector2(128, -1.34643)

[node name="Segment6" parent="LevelPart/Tentacles/Tentacle3/Segments" index="5"]
position = Vector2(160, 0.16976)

[node name="Segment7" parent="LevelPart/Tentacles/Tentacle3/Segments" index="6"]
position = Vector2(192, 1.57718)

[node name="Segment8" parent="LevelPart/Tentacles/Tentacle3/Segments" index="7"]
position = Vector2(224, 1.97406)

[node name="Segment9" parent="LevelPart/Tentacles/Tentacle3/Segments" index="8"]
position = Vector2(256, 1.1061)

[node name="Segment10" parent="LevelPart/Tentacles/Tentacle3/Segments" index="9"]
position = Vector2(288, -0.470561)

[node name="Segment11" parent="LevelPart/Tentacles/Tentacle3/Segments" index="10"]
position = Vector2(320, -1.74572)

[node name="Segment12" parent="LevelPart/Tentacles/Tentacle3/Segments" index="11"]
position = Vector2(352, -1.90235)

[node name="Segment13" parent="LevelPart/Tentacles/Tentacle3/Segments" index="12"]
position = Vector2(384, -0.840094)

[node name="Segment14" parent="LevelPart/Tentacles/Tentacle3/Segments" index="13"]
position = Vector2(416, 0.760437)

[node name="Segment15" parent="LevelPart/Tentacles/Tentacle3/Segments" index="14"]
position = Vector2(448, 1.87373)

[node name="Segment16" parent="LevelPart/Tentacles/Tentacle3/Segments" index="15"]
position = Vector2(480, 1.78648)

[node name="TotallyNotAdultToy" parent="LevelPart/Tentacles/Tentacle3/Segments" index="16"]
position = Vector2(512, 0.554579)
sprite_frames = SubResource("SpriteFrames_mdr4q")
frame_progress = 0.866996
offset = Vector2(-4, -38)

[node name="Tentacle4" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(208, 48)
rotation = -1.5708
scale = Vector2(1, -1)
is_vertical = true

[node name="Tentacle5" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(288, -16)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Tentacle6" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(-304, -56)

[node name="Tentacle7" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(288, -160)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Tentacle8" parent="LevelPart/Tentacles" instance=ExtResource("12_qkh7w")]
position = Vector2(-304, -200)

[node name="HAttackTimer" type="Timer" parent="LevelPart"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VAttackTimer" type="Timer" parent="LevelPart"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BossHealthbar" type="CanvasLayer" parent="LevelPart" node_paths=PackedStringArray("boss")]
layer = 8
script = ExtResource("14_of67m")
health_percentage = 1.0
boss = NodePath("../SquidBoss/Health")

[node name="Control" type="Control" parent="LevelPart/BossHealthbar"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Healthbar" type="TextureRect" parent="LevelPart/BossHealthbar/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 12.0
offset_right = 128.0
offset_bottom = 52.0
grow_horizontal = 2
texture = ExtResource("15_d14ba")

[node name="Progress" type="ColorRect" parent="LevelPart/BossHealthbar/Control"]
layout_mode = 0
offset_left = -100.0
offset_top = 26.0
offset_right = 138.0
offset_bottom = 40.0
color = Color(0.62, 0.124, 0.124, 1)

[node name="Blocker" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Boundary" type="CollisionShape2D" parent="Blocker"]
position = Vector2(0, 16)
shape = SubResource("WorldBoundaryShape2D_as5yp")

[node name="BubbleElevator" type="Area2D" parent="Blocker"]
position = Vector2(0, 32)
collision_mask = 6
gravity_space_override = 3
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 1470.0

[node name="Shape" type="CollisionShape2D" parent="Blocker/BubbleElevator"]
position = Vector2(0, -28)
shape = SubResource("RectangleShape2D_sr7y4")
debug_color = Color(0.393465, 0.61037, 0, 0.42)

[connection signal="die" from="LevelPart/SquidBoss/Health" to="LevelPart/SquidBoss" method="_on_health_die"]
[connection signal="hurt_at" from="LevelPart/SquidBoss/Health" to="LevelPart/SquidBoss" method="_on_health_hurt_at"]
[connection signal="timeout" from="LevelPart/HAttackTimer" to="LevelPart" method="_on_h_attack_timer_timeout"]
[connection signal="timeout" from="LevelPart/VAttackTimer" to="LevelPart" method="_on_v_attack_timer_timeout"]

[editable path="LevelPart/Tentacles/Tentacle3"]
